# ADDITION_FINAL

./: .gitignore  CMakeLists.txt  README.md  check_balance.bat  create_wallet.bat  create_wallet.ps1  create_wallet_py.py  launch_daemon.bat  mine_block.bat  mine_simple.bat  quick_info.bat  redeploy.ps1  rpc_test.py  run_all.bat  start_wallet.bat
.github/workflows/: docker-image.yml
apps/: additiond_main.cpp
client/addition_app/: README.md  pubspec.yaml
deploy/cloudflare/: README.md  deploy_cloudflare.ps1  wrangler.toml
deploy/github-docker/: Dockerfile  README.md  docker-compose.yml  run-local.ps1
docs/: AGENT_LAUNCH_AND_CLOUDFLARE_GUIDE.md  ARCHITECTURE.md  FINAL_COMMANDS.md  MAINNET_RUNBOOK.md  WHITE_PAPER.md
include/addition/: block.hpp  bridge.hpp  chain.hpp  config.hpp  consensus_engine.hpp  contract_engine.hpp  crypto.hpp  miner.hpp  (+11 more)
scripts/: create_wallet_and_mine.ps1  full_validation_current.ps1  healthcheck.ps1  mine_loop.ps1  objective_full_test.ps1  rpc_createwallet_test.ps1  start_mainnet.ps1
src/: block.cpp  bridge.cpp  chain.cpp  config.cpp  consensus_engine.cpp  contract_engine.cpp  crypto.cpp  decentralized_node.cpp  mempool.cpp  miner.cpp  p2p.cpp  privacy.cpp  rpc_network_server.cpp  rpc_server.cpp  staking.cpp  state_store.cpp  token_engine.cpp  wallet.cpp  wallet_keys.cpp
tests/: test_chain.cpp
tools/: zk_backend_contract.md  zk_verify_smoketest.py  zk_verify_wrapper.py
web/: addition_wallet_gui.py  addition_wallet_pro.py  install_wallet_pro.ps1  install_wallet_pro_macos.sh  launch_wallet_pro.bat  launch_wallet_pro.ps1  launch_wallet_pro_macos.sh
(+25 files in other folders)
